@@ -1,5 +1,5 @@
 Package: CAMERA
-Version: 1.3.6
+Version: 1.3.7
 Date: 2010-14-03
 Title: Collection of annotation related methods for mass spectrometry data 
 Author: Carsten Kuhl, Ralf Tautenhahn, Steffen Neumann {ckuhl|rtautenh|sneumann}@ipb-halle.de
